@@ -21,6 +21,8 @@ documents those changes that are of interest to users and admins.
     current version of slurm installed on system when building against the api.
  -- Patch from Matthieu Hautreux that adds an entry into the error file when
     a job or step receives a TERM or KILL signal.
+ -- Make it so env var SLURM_SRUN_COMM_HOST is overwritten if already in 
+    existance in the slurmd.
 
 * Changes in SLURM 2.1.0-pre8
 =============================
